--- a/css.html
+++ b/css.html
@@ -6,15 +6,16 @@
 
 :root
 {
---color-azul-claro: #7fb3d5;
---color-azul-oscuro: #2874a6;
---color-verde-claro: #d4efdf;
---color-verde-oscuro: #239b56;
---color-rojo-claro: #ec7063;
---color-rojo-oscuro: #c0392b;
---color-amarillo-claro: #f9e79f;
---color-amarillo-oscuro: #d4ac0d;
---color-gris-claro: #e5e7e9;
+    --color-azul-claro: #7FB3D5;
+    --color-azul-oscuro: #2874A6;
+    --color-verde-claro: #D4EFDF;
+    --color-verde-oscuro: #239B56;
+    --color-rojo-claro: #EC7063;
+    --color-rojo-oscuro: #C0392B;
+    --color-amarillo-claro: #F9E79F;
+    --color-amarillo-oscuro: #D4AC0D;
+    --color-gris-claro: #E5E7E9;
+    --color-gris-oscuro: #515A5A;
 
 }
 
@@ -36,9 +37,15 @@ transform: scale(1);
 
 .icono-footer:hover
 {
-color: var(--color-azul-claro);
+color: var(--color-verde-oscuro);
 transform: scale(1.2);
 
+}
+
+.icono-notificacion
+{
+    font-size: 1.5rem;
+    padding: .5rem;
 }
 
 </style>
