--- a/main.html
+++ b/main.html
@@ -1,31 +1,68 @@
 <main>
-    <!-- Botones-->
-    <div class="d-flex justify-content-center mb-4">
+  <!--FORMULARIO-->
+  <div class="d-flex justify-content-center my-3">
+    <!-- vamos a trabajar de otro forma el formulario
+        <form action="https://script.google.com/macros/s/AKfycbwYQ1wqVQ3XXBktqRKnPrvjmmq3g_-1dm6hQ0ENqqkE/dev"
+            method="get" id="formulario"> 
+             -->
+    <!-- Botones superiores-->
+    <button type="button" class="btn btn-success m-2" onclick="crearTablaContactos()">Mostrar contactos</button>
+    <button type="button" class="btn btn-primary m-2" data-bs-toggle="modal" data-bs-target="#crearContactoModal">
+      Nuevo Contacto
+    </button>
 
-        <button class="btn btn-success m-3" onclick="crearTablaContactos()">Mostrar contactos</button>
+  </div>
 
+
+  <div class="container col-12 col-lg-6 d-flex justify-content-center" id="divContactos"></div>
+  <!--Notificaciones-->
+  <div class="position-fixed bottom-0 end-0 p-3" style="z-index: 11">
+    <!--Toast-->
+    <div id="notificacion" class="toast align-items-center text-white border-0" role="alert" aria-live="assertive"
+      aria-atomic="true">
+
+      <div class="toast-header p-0">
+        <div class="icono-notificacion"><i id="iconoNotificacion"></i></div>
+        <strong class="me-auto" id="tituloNotificacion"></strong>
+        <button type="button" class="btn-close m-2" data-bs-dismiss="toast" aria-label="Close"></button>
+      </div>
+
+      <div class="toast-body" id="mensajeNotificacion"></div>
     </div>
-
-    <!--Tabla de contactos-->
-    <div class="container-sm mb-4 w-50" id="divContactos">
-
-    </div>
+  </div>
 
 
-    <!--Notificaciones-->
-    <div class="position-fixed bottom-0 end-0 p-3" style="z-index: 11">
-        <!--Toast-->
-        <div id="notificacion" class="toast align-items-center text-white bg-primary border-0" role="alert"
-            aria-live="assertive" aria-atomic="true">
 
-            <div class="toast-header p-0">
-                <div class="icono-notificacion"><i id="iconoNotificacion"></i></div>
-                <strong class="me-auto" id="tituloNotificacion"></strong>
-                <button type="button" class="btn-close m-2" data-bs-dismiss="toast" aria-label="Close"></button>
-            </div>
 
-            <div class="toast-body" id="mensajeNotificacion"></div>
+  <!-- Modal -->
+  <div class="modal fade" id="crearContactoModal" tabindex="-1" aria-labelledby="tituloCrearContactoModal"
+    aria-hidden="true">
+    <div class="modal-dialog">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title" id="titulocrearContactoModal">Nuevo Contacto</h5>
         </div>
+          <form onsubmit="insertarContacto()" method="dialog" id="formulario">
+            <!-- Formulario de crear contacto-->
+            <div class="modal-body">
+              <div class="mb-3">
+                <label for="nombre" class="form-label">Introduce el nombre del contacto</label>
+                <input type="text" class="form-control" name="nombre" id="nombre" required>
+              </div>
+
+              <div class="mb-3">
+                <label for="correo" class="form-label">Introduce el correo del contacto</label>
+                <input type="email" class="form-control" name="correo" id="correo" required>
+              </div>                                                            <!--required para que si o si pida completar los campos-->
+
+            </div>
+            <div class="modal-footer">
+              <button type="button" class="btn btn-secondary" data-bs-dismiss="">Cancelar</button>
+              <button type="submit" class="btn btn-success">Crear Contacto</button>
+            </div>
+          </form>
+        </div>
+      </div>
     </div>
 
 </main>
