--- a/main.html
+++ b/main.html
@@ -37,32 +37,42 @@
   <!-- Modal -->
   <div class="modal fade" id="crearContactoModal" tabindex="-1" aria-labelledby="tituloCrearContactoModal"
     aria-hidden="true">
-    <div class="modal-dialog">
+    <div class="modal-lg modal-dialog">
       <div class="modal-content">
         <div class="modal-header">
           <h5 class="modal-title" id="titulocrearContactoModal">Nuevo Contacto</h5>
         </div>
-          <form onsubmit="insertarContacto()" method="dialog" id="formulario">
-            <!-- Formulario de crear contacto-->
-            <div class="modal-body">
-              <div class="mb-3">
-                <label for="nombre" class="form-label">Introduce el nombre del contacto</label>
-                <input type="text" class="form-control" name="nombre" id="nombre" required>
+        <form onsubmit="insertarContacto()" method="dialog" id="formulario">
+          <!-- Formulario de crear contacto-->
+          <div class="modal-body">
+            <!-- Nombre y Apellido-->
+            <div class="row mb-3">
+              <div class="col-4">
+                <label for="nombre" class="form-label">Nombre</label>  <!--pattern="[\D]*" validamos que sea letras nada mas -->
+                <input type="text" class="form-control" name="nombre" id="nombre" pattern="[\D]*" title="El nombre no puede contener números" required><!--required para que si o si pida completar los campos-->
               </div>
 
-              <div class="mb-3">
-                <label for="correo" class="form-label">Introduce el correo del contacto</label>
-                <input type="email" class="form-control" name="correo" id="correo" required>
-              </div>                                                            <!--required para que si o si pida completar los campos-->
+              <div class="col-8">
+                <label for="nombre" class="form-label">Apellido</label>
+                <input type="text" class="form-control" name="apellido" id="apellido" pattern="[^0-9]*" title="El nombre no puede contener números" required>
+              </div>
+            </div>
+            <!-- Correo y telefono-->
+            <div class="input-group mb-3">
+              <span class="input-group-text"><i class="bi bi-envelope-fill"></i></span>
+              <input type="email" class="form-control me-4" name="correo" id="correo" required>
 
+              <span class="input-group-text"><i class="bi bi-telephone-fill"></i></span>
+              <input type="tel" class="form-control" name="telf" id="telf" pattern="[0-9]{9,11}" title="El telefono debe contener entre 9 y 11 dígitos numéricos" required>
             </div>
-            <div class="modal-footer">
-              <button type="button" class="btn btn-secondary" data-bs-dismiss="">Cancelar</button>
-              <button type="submit" class="btn btn-success">Crear Contacto</button>
-            </div>
-          </form>
-        </div>
+         </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-bs-dismiss="">Cancelar</button>
+        <button type="submit" class="btn btn-success">Crear Contacto</button>
       </div>
+      </form>
     </div>
+  </div>
+  </div>
 
 </main>
