--- a/main.html
+++ b/main.html
@@ -1,76 +1,69 @@
 <main>
-  <!--FORMULARIO-->
+<!-- Botones superiores-->
   <div class="d-flex justify-content-center my-3">
     <!-- vamos a trabajar de otro forma el formulario
-        <form action="https://script.google.com/macros/s/AKfycbwYQ1wqVQ3XXBktqRKnPrvjmmq3g_-1dm6hQ0ENqqkE/dev"
-            method="get" id="formulario"> 
-             -->
-    <!-- Botones superiores-->
+        <form action="https://script.google.com/macros/s/AKfycbwYQ1wqVQ3XXBktqRKnPrvjmmq3g_-1dm6hQ0ENqqkE/dev" method="get" id="formulario">-->
+    
+    
     <button type="button" class="btn btn-success m-2" onclick="crearTablaContactos()">Mostrar contactos</button>
     <button type="button" class="btn btn-primary m-2" onclick="abrirModalCrearContacto()">Crear Contacto</button>
 
   </div>
 
-
+  <!--Tabla de Contactos-->
   <div class="container col-12 col-lg-6 d-flex justify-content-center" id="divContactos"></div>
+
   <!--Notificaciones-->
-  <div class="position-fixed bottom-0 end-0 p-3" style="z-index: 11">
-    <!--Toast-->
-    <div id="notificacion" class="toast align-items-center text-white border-0" role="alert" aria-live="assertive"
-      aria-atomic="true">
-
-      <div class="toast-header p-0">
-        <div class="icono-notificacion"><i id="iconoNotificacion"></i></div>
-        <strong class="me-auto" id="tituloNotificacion"></strong>
-        <button type="button" class="btn-close m-2" data-bs-dismiss="toast" aria-label="Close"></button>
-      </div>
-
-      <div class="toast-body" id="mensajeNotificacion"></div>
-    </div>
+  <div class="div-notificaciones position-fixed bottom-0 end-0 p-3">
+    <div class="toast-container" id="contenedorNotificaciones">
+      <!--Aqui van las notificaciones-->
+ </div>
   </div>
 
+    <!-- Modal -->
+    <div class="modal fade" id="crearContactoModal" tabindex="-1" aria-labelledby="tituloCrearContactoModal"
+      aria-hidden="true">
+      <div class="modal-lg modal-dialog">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h5 class="modal-title" id="tituloModal">Nuevo Contacto</h5>
+          </div>
+          <form onsubmit="insertarContacto()" method="dialog" id="formulario">
+            <!-- Formulario de crear contacto-->
+            <div class="modal-body">
+              <!-- Nombre y Apellido-->
+              <div class="row mb-3">
+                <div class="col-4">
+                  <label for="nombre" class="form-label">Nombre</label>
+                  <!--pattern="[\D]*" validamos que sea letras nada mas -->
+                  <input type="text" class="form-control" name="nombre" id="nombre" pattern="[\D]*"
+                    title="El nombre no puede contener números"
+                    required><!--required para que si o si pida completar los campos-->
+                </div>
 
+                <div class="col-8">
+                  <label for="nombre" class="form-label">Apellido</label>
+                  <input type="text" class="form-control" name="apellido" id="apellido" pattern="[^0-9]*"
+                    title="El nombre no puede contener números" required>
+                </div>
+              </div>
+              <!-- Correo y telefono-->
+              <div class="input-group mb-3">
+                <span class="input-group-text"><i class="bi bi-envelope-fill"></i></span>
+                <input type="email" class="form-control me-4" name="correo" id="correo" required>
 
-
-  <!-- Modal -->
-  <div class="modal fade" id="crearContactoModal" tabindex="-1" aria-labelledby="tituloCrearContactoModal"
-    aria-hidden="true">
-    <div class="modal-lg modal-dialog">
-      <div class="modal-content">
-        <div class="modal-header">
-          <h5 class="modal-title" id="tituloModal">Nuevo Contacto</h5>
+                <span class="input-group-text"><i class="bi bi-telephone-fill"></i></span>
+                <input type="tel" class="form-control" name="telf" id="telf" pattern="[\d]{7,11}"
+                  title="El telefono debe contener entre 6 y 11 dígitos numéricos" required>
+              </div>
+            </div>
+            <div class="modal-footer">
+              <button type="button" class="btn btn-secondary" data-bs-dismiss="">Cancelar</button>
+              <button id="botonCrearModificar" type="submit" class="btn btn-success">Crear Contacto</button>
+            </div>
+          </form>
         </div>
-        <form onsubmit="insertarContacto()" method="dialog" id="formulario">
-          <!-- Formulario de crear contacto-->
-          <div class="modal-body">
-            <!-- Nombre y Apellido-->
-            <div class="row mb-3">
-              <div class="col-4">
-                <label for="nombre" class="form-label">Nombre</label>  <!--pattern="[\D]*" validamos que sea letras nada mas -->
-                <input type="text" class="form-control" name="nombre" id="nombre" pattern="[\D]*" title="El nombre no puede contener números" required><!--required para que si o si pida completar los campos-->
-              </div>
-
-              <div class="col-8">
-                <label for="nombre" class="form-label">Apellido</label>
-                <input type="text" class="form-control" name="apellido" id="apellido" pattern="[^0-9]*" title="El nombre no puede contener números" required>
-              </div>
-            </div>
-            <!-- Correo y telefono-->
-            <div class="input-group mb-3">
-              <span class="input-group-text"><i class="bi bi-envelope-fill"></i></span>
-              <input type="email" class="form-control me-4" name="correo" id="correo" required>
-
-              <span class="input-group-text"><i class="bi bi-telephone-fill"></i></span>
-              <input type="tel" class="form-control" name="telf" id="telf" pattern="[0-7]{7,11}" title="El telefono debe contener entre 9 y 11 dígitos numéricos" required>
-            </div>
-         </div>
-      <div class="modal-footer">
-        <button type="button" class="btn btn-secondary" data-bs-dismiss="">Cancelar</button>
-        <button id="botonCrearModificar" type="submit" class="btn btn-success">Crear Contacto</button>
       </div>
-      </form>
     </div>
-  </div>
-  </div>
 
 </main>
