Video22 curso-gas-avanzado

--- a/main.html
+++ b/main.html
@@ -7,6 +7,7 @@
     
     <button type="button" class="btn btn-success m-2" onclick="crearTablaContactos()">Mostrar contactos</button>
     <button type="button" class="btn btn-primary m-2" onclick="abrirModalCrearContacto()">Crear Contacto</button>
+    <button type="button" class="btn btn-warning m-2" onclick="importarContactos()">+ 5</button>
 
   </div>
 
@@ -17,8 +18,8 @@
   <div class="div-notificaciones position-fixed bottom-0 end-0 p-3">
     <div class="toast-container" id="contenedorNotificaciones">
       <!--Aqui van las notificaciones-->
- </div>
   </div>
+</div>
 
     <!-- Modal -->
     <div class="modal fade" id="crearContactoModal" tabindex="-1" aria-labelledby="tituloCrearContactoModal"
