--- a/web.html
+++ b/web.html
@@ -11,7 +11,7 @@
     <?!= obtenerDatosHTML('css'); ?>
 
 </head>
-<body class="d-flex flex-column min-vh-100">
+<body>
 
     <!-- HEADER -->
     <?!= obtenerDatosHTML('header'); ?>
@@ -24,6 +24,7 @@
 
     <!-- JS -->
     <?!= obtenerDatosHTML('js'); ?>
+    <?!= obtenerDatosHTML('notificaciones'); ?>
 
 </body>
 
