--- a/js.html
+++ b/js.html
@@ -87,13 +87,26 @@
         tabla.appendChild(tablaHeader);
 
         // BODY de la tabla / CON BUCLE FOR doble ANIDADO - 
-        for (let i = 1; i < obj.length; i++) {
+        for (let i = 1; i < obj.length; i++) { //Bucle externo <<Recorre con una de las filas de la tabla
             let fila = document.createElement('tr');
-            for (let j = 0; j < obj[i].length; j++) {
+            for (let j = 0; j < obj[i].length; j++) { //<<Bucle interno recorre cada de las celdas de la tabla
                 let celda = document.createElement('td');
                 celda.textContent = obj[i][j];
                 //añadimos celda a la fila
                 fila.appendChild(celda);
+
+            if(j == 4){  // j es igual a 4 columnas
+
+                //creamos la imagen
+                celda.textContent = ''; //<<vaviamos la imagen
+                let imagen = document.createElement('img');
+                imagen.classList.add('img-fluid' , 'rounded') //para que sea RESPONSIVE img-fluid y ROUNDED borde redondeado
+                imagen.src = obj[i][j]; //indicamos la fuente SRC que se corresponde con el nombre la URL de la imagen
+                celda.appendChild(imagen);
+
+            }
+                        
+
             }
 
             //añadimos los botones a la fila
