--- a/header.html
+++ b/header.html
@@ -8,3 +8,7 @@
 
 
 </header>
+
+<a id="botonSubir" onclick="subirArriba()" class="subir-arriba btn border-5 border-dark">
+<i class="bi bi-caret-up-fill font-weight-bold fs-5 p-0"></i>
+</a>
