Video25 curso-gas-avanzado

--- a/main.html
+++ b/main.html
@@ -5,7 +5,8 @@
         <form action="https://script.google.com/macros/s/AKfycbwYQ1wqVQ3XXBktqRKnPrvjmmq3g_-1dm6hQ0ENqqkE/dev" method="get" id="formulario">-->
     
     
-    <button type="button" class="btn btn-success m-2" onclick="crearTablaContactos()">Mostrar contactos</button>
+    <button type="button" class="btn btn-success m-2" onclick="crearTarjetasContactos()">Mostrar contactos</button>
+    <button type="button" class="btn btn-success m-2" onclick="crearTablaContactos()">Mostrar contactos Tabla</button>
     <button type="button" class="btn btn-primary m-2" onclick="abrirModalCrearContacto()">Crear Contacto</button>
     <button type="button" class="btn btn-warning m-2" onclick="importarContactos()">+ 5</button>
 
