--- a/web.html
+++ b/web.html
@@ -24,7 +24,11 @@
 
     <!-- JS -->
     <?!= obtenerDatosHTML('js'); ?>
+    <?!= obtenerDatosHTML('modales'); ?>
     <?!= obtenerDatosHTML('notificaciones'); ?>
+    <?!= obtenerDatosHTML('tarjetas'); ?>
+    <?!= obtenerDatosHTML('tablas'); ?>
+    <?!= obtenerDatosHTML('loaders'); ?>
 
 </body>
 
