--- a/css.html
+++ b/css.html
@@ -71,6 +71,13 @@ background-color: #eee;
   z-index: 10; /*que se muestre por encima de la notificacion */
 }
 
+.img-contacto
+{
+ object-fit: cover;
+ height: 12rem;
+ width: 12rem;
+}
+
 /* LOADER ANILLO*/
 .lds-ring {
   display: inline-block;
