Video26 curso-gas-avanzado

--- a/js.html
+++ b/js.html
@@ -1,22 +1,5 @@
 <script>
-    //boton subir
-    window.addEventListener('scroll', function()
-    {
-        if(this.window.scrollY > 500)
-        {
-       document.getElementById('botonSubir').style.transform = 'scale(1)';
-        }
-        if(this.window.scrollY <500)
-        {
-            document.getElementById('botonSubir').style.transform = "scale(0)";
-        }
-    });
-
-    function subirArriba()
-    {
-        document.body.scrollTop = 0;
-        document.documentElement.scrollTop = 0;
-    }
+    
 
     function limpiar()
     {
@@ -61,7 +44,7 @@
         //eliminamos loader
         eliminarLoader();
 
-        //mostramos tabla conctacto
+        //mostramos tabla contacto
         crearTablaContactos();
     }
 
@@ -69,7 +52,7 @@
         crearNotificacionError('No se ha podido insertar el contacto', 'ERROR');
         //eliminamos loader
         eliminarLoader();
-        //mostramos tabla conctacto
+        //mostramos tabla contacto
         crearTablaContactos();
     }
     //MODIFICAR CONTACTOS
