--- a/web.html
+++ b/web.html
@@ -24,11 +24,14 @@
 
     <!-- JS -->
     <?!= obtenerDatosHTML('js'); ?>
+    <?!= obtenerDatosHTML('eventos'); ?>
+    <?!= obtenerDatosHTML('botonesContacto'); ?>
     <?!= obtenerDatosHTML('modales'); ?>
     <?!= obtenerDatosHTML('notificaciones'); ?>
     <?!= obtenerDatosHTML('tarjetas'); ?>
     <?!= obtenerDatosHTML('tablas'); ?>
     <?!= obtenerDatosHTML('loaders'); ?>
+    
 
 </body>
 
