video27  gas avanzado

--- a/main.html
+++ b/main.html
@@ -1,31 +1,86 @@
 <main>
-    <!-- Botones-->
-    <div class="d-flex justify-content-center mb-4">
+  <!-- Botones superiores-->
+  <div class="d-flex justify-content-center my-3">
+    <button type="button" class="btn btn-success m-2" onclick="crearTarjetasContactos()">Mostrar contactos</button>
+    <button type="button" class="btn btn-success m-2" onclick="crearTablaContactos()">Mostrar contactos Tabla</button>
+    <button type="button" class="btn btn-primary m-2" onclick="abrirModalCrearContacto()">Crear Contacto</button>
+    <button type="button" class="btn btn-warning m-2" onclick="importarContactos()">+ 5</button>
+  </div>
 
-        <button class="btn btn-success m-3" onclick="crearTablaContactos()">Mostrar contactos</button>
+  <!--Contactos-->
+  <div class="container col-12 d-flex justify-content-center" id="divContactos"></div>
 
+  <!--Notificaciones-->
+  <div class="div-notificaciones position-fixed bottom-0 end-0 p-3">
+    <div class="toast-container" id="contenedorNotificaciones">
+      <!--Aqui van las notificaciones-->
     </div>
+  </div>
 
-    <!--Tabla de contactos-->
-    <div class="container col-12 col-lg-6 mb-4 w-50 d-flex justify-content-center" id="divContactos">
-
-    </div>
-
-
-    <!--Notificaciones-->
-    <div class="position-fixed bottom-0 end-0 p-3" style="z-index: 11">
-        <!--Toast-->
-        <div id="notificacion" class="toast align-items-center text-white border-0" role="alert"
-            aria-live="assertive" aria-atomic="true">
-
-            <div class="toast-header p-0">
-                <div class="icono-notificacion"><i id="iconoNotificacion"></i></div>
-                <strong class="me-auto" id="tituloNotificacion"></strong>
-                <button type="button" class="btn-close m-2" data-bs-dismiss="toast" aria-label="Close"></button>
-            </div>
-
-            <div class="toast-body" id="mensajeNotificacion"></div>
+  <!-- Modal -->
+  <div class="modal fade" id="crearContactoModal" tabindex="-1" aria-labelledby="tituloCrearContactoModal"
+    aria-hidden="true">
+    <div class="modal-lg modal-dialog">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title" id="tituloModal">Nuevo Contacto</h5>
         </div>
+        <form onsubmit="insertarContacto()" method="dialog" id="formulario">
+          <!-- Formulario de crear contacto-->
+          <div class="modal-body">
+            
+            <div class="row mb-3">
+              <!-- Parte izquierda DEL MODAL TARJETA-->
+              <div class="col-6 d-flex flex-column">
+                <!-- Nombre -->
+                <div class="mb-2">
+                  <label for="nombre" class="form-label">Nombre</label>
+                  <!--pattern="[\D]*" validamos que sea letras nada mas -->
+                  <input type="text" class="form-control" name="nombre" id="nombre" pattern="[\D]*"
+                    title="El nombre no puede contener números"
+                    required><!--required para que si o si pida completar los campos-->
+                </div>
+                <!-- Apellidos-->
+                <div class="mb-2">
+                  <label for="nombre" class="form-label">Apellido</label>
+                  <input type="text" class="form-control" name="apellidos" id="apellidos" pattern="[^0-9]*"
+                    title="El nombre no puede contener números" required>
+
+                </div>
+                <!-- Correo -->
+                <div class="input-group mb-2">
+                  <span class="input-group-text"><i class="bi bi-envelope-fill"></i></span>
+                  <input type="email" class="form-control name= correo" id="correo" required>
+                </div>
+
+                <!-- Teléfono -->
+                <div class="input-group mb-2">
+                  <span class="input-group-text"><i class="bi bi-telephone-fill"></i></span>
+                  <input type="tel" class="form-control" name="telf" id="telf" pattern="[\d]{7,11}"
+                    title="El telefono debe contener entre 6 y 11 dígitos numéricos" required>
+                </div>
+
+                <!-- Archivo -->
+                <div class="mb-2">
+                  <label for="imagen" class="form-label">Selecciona una imagen para el contacto</label>
+                  <input type="file" accept="imagen/*" class="form-control" name="imagen" id="imagen">
+                </div>
+              </div>
+
+              <!-- Parte Derecha DEL MODAL TARJETA-->
+              <div class="col-6 d-flex justify-content-center align-items-center p-0">
+                <img class="img-fluid img-form" id="imgForm" alt="Imagen de Contacto">
+              </div>
+            </div>
+          </div>
+
+          <div class="modal-footer">
+            <button type="button" class="btn btn-secondary" data-bs-dismiss="">Cancelar</button>
+            <button id="botonCrearModificar" type="submit" class="btn btn-success">Crear Contacto</button>
+          </div>
+        </form>
+      </div>
     </div>
+  </div>
 
 </main>
