--- a/css.html
+++ b/css.html
@@ -1,6 +1,8 @@
+<script src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script>
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
+
 
 <style>
 
@@ -16,30 +18,30 @@
     --color-amarillo-oscuro: #D4AC0D;
     --color-gris-claro: #E5E7E9;
     --color-gris-oscuro: #515A5A;
+}
+body{
 
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
 }
 
 header {
-
 background-color: #eee;
-
 }
 
 .icono-footer
 {
-
-font-family: 1.5rem;
-padding: 1rem;
-transition: all .2s ease-in-out;
-transform: scale(1);
-
+  font-size: 1.5rem;
+    padding: 1rem;
+    transition: all .2s ease-in-out;
+    transform: scale(1);
 }
 
 .icono-footer:hover
 {
-color: var(--color-verde-oscuro);
-transform: scale(1.2);
-
+    color: var(--color-azul-claro);
+    transform: scale(1.2);
 }
 
 .icono-notificacion
@@ -48,7 +50,50 @@ transform: scale(1.2);
     padding: .5rem;
 }
 
+.div-notificaciones
+{
+  z-index: 11;
+}
 
+.div-notificaciones
+{
+  z-index: 11;
+}
+
+.subir-arriba
+{
+  background-color: var(--color-gris-claro);
+  position: fixed; /* fijo */
+  transition: all .4s ease-in-out; /* cuando aparezca el boton y desaparezca*/
+  transform: scale(0); /* */
+  bottom: 1%; /*abajo a la derecha */
+  right: 1%;/*abajo a la derecha */
+  z-index: 10; /*que se muestre por encima de la notificacion */
+}
+
+.img-contacto
+{
+ object-fit: cover;
+ height: 12rem;
+ width: 12rem;
+}
+
+.img-form
+{
+
+height: 18rem;
+width: 18rem;
+border: 1px solid black;
+border-radius: .5rem;
+object-fit: cover; /* contain ajusta el tamaño de la imagen en el recuadro de contacto */
+
+}
+
+.img-tabla
+{
+height: 4rem;
+object-fit: cover;
+}
 
 /* LOADER ANILLO*/
 .lds-ring {
@@ -57,6 +102,7 @@ transform: scale(1.2);
   width: 80px;
   height: 80px;
 }
+
 .lds-ring div {
   box-sizing: border-box;
   display: block;
@@ -86,8 +132,6 @@ transform: scale(1.2);
     transform: rotate(360deg);
   }
 }
-
-
 
 /* LOADER TIPO PUNTOS*/
 
@@ -146,7 +190,6 @@ transform: scale(1.2);
     transform: translate(24px, 0);
   }
 }
-
 
 
 </style>
