Video28 curso-gas-avanzado

--- a/css.html
+++ b/css.html
@@ -78,6 +78,23 @@ background-color: #eee;
  width: 12rem;
 }
 
+.img-form
+{
+
+height: 18rem;
+width: 18rem;
+border: 1px solid black;
+border-radius: .5rem;
+object-fit: cover; /* contain ajusta el tamaño de la imagen en el recuadro de contacto */
+
+}
+
+.img-tabla
+{
+height: 4rem;
+object-fit: cover;
+}
+
 /* LOADER ANILLO*/
 .lds-ring {
   display: inline-block;
