--- a/tablas.html
+++ b/tablas.html
@@ -140,7 +140,7 @@
     {
         let celda = document.createElement('td');
         let imagen = document.createElement('img');
-        imagen.classList.add('img-fluid', 'rounded') //para que sea RESPONSIVE img-fluid y ROUNDED borde redondeado
+        imagen.classList.add('img-fluid', 'rounded', 'img-tabla'); //para que sea RESPONSIVE img-fluid y ROUNDED borde redondeado
         imagen.src = rutaImagen; //indicamos la fuente SRC que se corresponde con el nombre la URL de la imagen
         celda.appendChild(imagen);
         
