--- a/eventos.html
+++ b/eventos.html
@@ -12,10 +12,18 @@
         }
     });
 
+    //CARGAR IMAGEN en vista previa del MODAL
+    document.getElementById('imagen').addEventListener("change", function()
+    {     //accedemos al primer[0] fichero del this <<input / no usar operador flecha
+     document.getElementById('imgForm').src = URL.createObjectURL(this.files[0])
+    });
+
     function subirArriba()
     {
         document.body.scrollTop = 0;
         document.documentElement.scrollTop = 0;
     }
+
+    
 
 </script>
