--- a/loaders.html
+++ b/loaders.html
@@ -1,8 +1,8 @@
 <script>
+
 function crearLoader(elementoPadre) {
         //si lo encontramos lo elimanamos
         eliminarLoader();
-
         let loader = document.createElement('div');
         loader.id = 'loader';
         //le insertamos 4 div hijos
@@ -28,4 +28,42 @@ function crearLoader(elementoPadre) {
         let loader = document.getElementById('loader');
         if (loader) loader.remove();
     }
+    
+    function crearLoaderImagen(elementoPadre)
+    {
+        let loader = document.createElement('div');
+        loader.appendChild(document.createElement('div'));
+        loader.appendChild(document.createElement('div'));
+        loader.appendChild(document.createElement('div'));
+        loader.appendChild(document.createElement('div'));
+        loader.classList.add('lds-ring');
+        elementoPadre.appendChild(loader);
+        return loader;
+    }
+
+    function crearLoaderLottie(elementoPadre, lottie )
+    {
+        eliminarLoader();
+        let loaderLottie = document.createElement('lottie-player');
+           
+        //establecer atributos
+        loaderLottie.setAttribute('src', lottie);
+        loaderLottie.setAttribute('background','transparent');
+        loaderLottie.setAttribute('speed','1');
+        loaderLottie.style.width = '12rem';
+        loaderLottie.style.height = '12rem';
+        loaderLottie.autoplay = true;
+
+        let divLottie = document.createElement('div');
+        divLottie.appendChild(loaderLottie);
+        divLottie.id = 'loader';
+
+        //agregamos al DOM
+        document.getElementById(elementoPadre).appendChild(divLottie);
+    }
+
+
+
+
+
 </script>
