--- a/js.html
+++ b/js.html
@@ -1,5 +1,7 @@
 <script>
-
+   //////////////////
+   // CONSTANTES 
+   /////////////////
     const ICONO_CHECK = 'bi-check2-square';
     const ICONO_PAPELERA = 'bi-trash';
     const ICONO_CONTACTO = 'bi-person-plus-fill';
@@ -14,6 +16,7 @@
     const LOTTIE_LOADER_NUBE = 'https://assets8.lottiefiles.com/private_files/lf30_m5jf97io.json';
     const LOTTIE_LOADER_FRASE = 'https://assets1.lottiefiles.com/packages/lf20_yTjvtJ.json';
 
+    
     function limpiar() {
         eliminarTabla();
         eliminarTarjetas();
