--- a/tarjetas.html
+++ b/tarjetas.html
@@ -119,7 +119,7 @@
         let cajaImagenTarjeta = document.createElement('div');
         cajaImagenTarjeta.classList.add('box', 'rounded', 'd-flex' , 'justify-content-center' ,'align-items-center' ,'img-contacto');
         let imagen = document.createElement('img');
-        imagen.classList.add('img-fluid', 'rounded', 'img-contacto', 'border', 'border-3', 'border-dark',);
+        imagen.classList.add('img-fluid', 'rounded', 'img-contacto', 'border', 'border-3', 'border-dark');
         imagen.src = contacto.imagen;
         // no mostramos la imagen / hasta que tengamos la imagen, solo el incono de carga
         imagen.style.display = 'none';
