--- a/lotties.html
+++ b/lotties.html
@@ -1,2 +1,9 @@
-<script src="https://unpkg.com/@lottiefiles/lottie-player@1.5.7/dist/lottie-player.js"></script>
+<script src="/node_modules/@lottiefiles/lottie-player/dist/lottie-player.js">
 
+
+
+
+
+
+    
+</script>
