--- a/css.html
+++ b/css.html
@@ -80,46 +80,52 @@
   }
 
   /* CLASES FORMULARIO */
+  .div-datos-form {
+    height: 20rem;
+    width: 20rem;
+    margin: 1rem;
+
+  }
+
+  .div-img-form {
+    display: flex;
+    position: relative;
+    justify-content: center;
+    align-items: center;
+    height: 20rem;
+    width: 20rem;
+
+  }
+
 
   .img-form {
     position: absolute;
-    height: 18rem;
+    height: 20rem;
+    width: 20rem;
     border: 1px solid black;
     border-radius: .5rem;
-    object-fit: cover;   /* contain ajusta el tamaño de la imagen en el recuadro de contacto */
+    object-fit: cover;
+    /* contain ajusta el tamaño de la imagen en el recuadro de contacto */
     z-index: 2;
   }
 
-  .caja-icono-form {
+  .lottie-form {
     position: absolute;
-    height: 18rem;
+    height: 20rem;
+    width: 20rem;
     border: .4rem dashed green;
     display: none;
-    justify-content: center;
-    align-items: center;
     z-index: 1;
   }
 
-  .icono-img-form {
-    font-size: 10rem;
-    color: green;
-    animation: animacion-drag-drop 3s infinite;
+  .icono-form {
+    position: absolute;
+    color: var(--color-amarillo-claro);
+    font-size: 1.5rem;
+    right: 0rem;
+    top: 0rem;
+    z-index: 3;
   }
-
-  @keyframes animacion-drag-drop {
-    0% {
-      font-size: 10rem;
-    }
-
-    50% {
-      font-size: 9rem;
-    }
-
-    100% {
-      font-size: 10rem;
-    }
-  }
-
 
 
   /* LOADER ANILLO*/
