--- a/eventos.html
+++ b/eventos.html
@@ -29,7 +29,7 @@
    {
     event.preventDefault();
     this.style.filter = 'opacity(0%)'; // la imagen esta arriba pero no vemos nada,VEMOS lo qye hay abajo
-    document.getElementById("cajaIconoForm").style.display = 'flex';
+    document.getElementById('lottieForm').style.display = 'flex';
    });
 
 
@@ -38,7 +38,7 @@
     document.getElementById('imgForm').addEventListener('dragleave', function(event)
    {
     this.style.filter = 'opacity(100%)'; // la imagen esta arriba pero no vemos nada
-    document.getElementById("cajaIconoForm").style.display = 'none';
+    document.getElementById('lottieForm').style.display = 'none';
    });
 
 
@@ -55,7 +55,7 @@
     document.getElementById('imgForm').src = URL.createObjectURL(ficheros[0]);
     //mostramos la imagen y quitamos zona de carga
     this.style.filter = 'opacity(100%)';
-    document.getElementById("cajaIconoForm").style.display = 'none';
+    document.getElementById('lottieForm').style.display = 'none';
    });
     
 
