video32  gas avanzado

--- a/botonesContacto.html
+++ b/botonesContacto.html
@@ -4,7 +4,7 @@
         let botonInfo = document.createElement('button');
         botonInfo.id = 'botonInfo' + contacto.fila;
         botonInfo.classList.add('btn', 'btn-success', 'm-1');
-        botonInfo.onclick = () => mostrarInformacionAdicionalContacto(contacto);
+        botonInfo.onclick = () => abrilModalInfoContato(contacto);
 
         // le vamos agregar un icono
         let iconoInfo = document.createElement('i');
@@ -44,4 +44,7 @@
         return botonModificar;
 
     }
+
+
+
 </script>
