--- a/eventos.html
+++ b/eventos.html
@@ -1,29 +1,96 @@
 <script>
-//boton subir
-    window.addEventListener('scroll', function()
-    {
-        if(this.window.scrollY > 500)
-        {
-       document.getElementById('botonSubir').style.transform = 'scale(1)';
+    //boton subir
+    window.addEventListener('scroll', function () {
+        if (this.window.scrollY > 500) {
+            document.getElementById('botonSubir').style.transform = 'scale(1)';
         }
-        if(this.window.scrollY <500)
-        {
+        if (this.window.scrollY < 500) {
             document.getElementById('botonSubir').style.transform = "scale(0)";
         }
     });
 
     //CARGAR IMAGEN en vista previa del MODAL
-    document.getElementById('imagen').addEventListener("change", function()
-    {     //accedemos al primer[0] fichero del this <<input / no usar operador flecha
-     document.getElementById('imgForm').src = URL.createObjectURL(this.files[0])
+    document.getElementById('imagen').addEventListener("change", function () {     //accedemos al primer[0] fichero del this <<input / no usar operador flecha
+        document.getElementById('imgForm').src = URL.createObjectURL(this.files[0])
     });
 
-    function subirArriba()
-    {
+    function subirArriba() {
         document.body.scrollTop = 0;
         document.documentElement.scrollTop = 0;
     }
 
-    
+    //DRAGOVER  >> se dispara cuando arratremos un archivos en la zona de carga
+    document.getElementById('imgForm').addEventListener('dragover', function (event) {
+        event.preventDefault();
+        this.style.filter = 'opacity(0%)'; // la imagen esta arriba pero no vemos nada,VEMOS lo qye hay abajo
+        document.getElementById('lottieForm').style.display = 'flex';
+    });
+
+
+    //DRAGLEAVE >> se ejecuta cuando salimos de esa zona carga
+
+    document.getElementById('imgForm').addEventListener('dragleave', function (event) {
+        this.style.filter = 'opacity(100%)'; // la imagen esta arriba pero no vemos nada
+        document.getElementById('lottieForm').style.display = 'none';
+    });
+
+
+    //DROP >>> cuando soltamos el archivos en la zana de carga
+
+    document.getElementById('imgForm').addEventListener('drop', function (event) {
+        event.preventDefault();
+        // aqui estaran guardados todos los archivos que  hallamos arrastrado a la zona de carga
+        let ficheros = event.dataTransfer.files;
+        //pasamos los arhivos al INPUT
+        document.getElementById('imagen').files = ficheros;
+        // crarmos url para mostrar imagen
+        document.getElementById('imgForm').src = URL.createObjectURL(ficheros[0]);
+        //mostramos la imagen y quitamos zona de carga
+        this.style.filter = 'opacity(100%)';
+        document.getElementById('lottieForm').style.display = 'none';
+    });
+
+
+
+    //Clickboard para copiar contenidos con un click >>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>
+
+    document.getElementById('copiarCorreo').addEventListener('click', function (event) 
+    {
+      copiarContenido(this, 'correoInfoContacto')
+    });
+
+    document.getElementById('copiarTelf').addEventListener('click', function (event)
+    {
+        copiarContenido(this, 'telfInfoContacto')
+    });
+
+    function copiarContenido(icono, id) {
+        let texto = document.getElementById(id).textContent;
+        navigator.clipboard.writeText(texto)
+            .then(() => {
+                icono.classList.remove('bi-clipboard');
+                icono.classList.add('bi-check-lg');
+                icono.title = 'Copiado';
+                bootstrap.Tooltip.getOrCreateInstance(icono).show();
+                restaurarIcono(icono);
+            })
+    }
+
+    function restaurarIcono(icono) {
+        setTimeout(function () {
+            icono.classList.remove('bi-check-lg');
+            icono.classList.add('bi-clipboard');
+            icono.title = '';
+            bootstrap.Tooltip.getInstance(icono).dispose();
+
+        }, 2000);
+    }
+
+
+    // habilitacion de popovers 
+    const popoverTriggerList = document.querySelectorAll('[data-bs-toggle="popover"]')
+    const popoverList = [...popoverTriggerList].map(popoverTriggerEl => new bootstrap.Popover(popoverTriggerEl))
+
+
 
 </script>
