--- a/modales.html
+++ b/modales.html
@@ -47,10 +47,25 @@
         document.getElementById('apellidos').value = contacto.apellidos;
         document.getElementById('correo').value = contacto.correo;
         document.getElementById('telf').value = contacto.telf;
+        document.getElementById('imgForm').src = contacto.imagen;
+        document.getElementById('imagen').value = '';
 
         //abrimos modal
         bootstrap.Modal.getOrCreateInstance(document.getElementById('crearContactoModal')).show();
 
+    }
+
+    function abrilModalInfoContato(contacto)
+    {
+        //obtener datos
+        document.getElementById('nombreInfoContacto').textContent = contacto.nombre+''+contacto.apellidos;
+        document.getElementById('correoInfoContacto').textContent = contacto.correo;
+        document.getElementById('telfInfoContacto').textContent = contacto.telf;
+        document.getElementById('imgInfoContacto').src = contacto.imagen;
+        //abrimos modal
+        bootstrap.Modal.getOrCreateInstance(document.getElementById('infoContactoModal')).show();
+
+        
     }
 
 
