--- a/main.html
+++ b/main.html
@@ -13,17 +13,15 @@
     <button type="button" class="btn btn-warning m-2" onclick="importarContactos()">+ 5</button>
   </div>
 
-  <!--Contactos-->
+  <!--CONTACTOS-->
   <div class="container col-12 d-flex justify-content-center" id="divContactos"></div>
 
-  <!--Notificaciones-->
+  <!--NOTIFICACIONES-->
   <div class="div-notificaciones position-fixed bottom-0 end-0 p-3">
-    <div class="toast-container" id="contenedorNotificaciones">
-      <!--Aqui van las notificaciones-->
-    </div>
+    <div class="toast-container" id="contenedorNotificaciones"></div>
   </div>
 
-  <!-- Modal -->
+  <!-- Modal CREAR MODIFICAR CONTACTO -->
   <div class="modal fade" id="crearContactoModal" tabindex="-1" aria-labelledby="tituloCrearContactoModal"
     aria-hidden="true">
     <div class="modal-lg modal-dialog">
@@ -35,7 +33,7 @@
         <form onsubmit="insertarContacto()" method="dialog" id="formulario">
           <div class="modal-body">
             <div class="row mb-3 d-flex justify-content-center align-items-center flex-wrap">
-           
+
               <!-- Parte izquierda DEL MODAL TARJETA-->
               <div class="div-datos-form">
                 <!-- Nombre -->
@@ -75,11 +73,14 @@
 
               <!-- Parte Derecha DEL MODAL TARJETA-->
               <div class="div-img-form">
-                <i class="icono-form bi bi-question-circle-fill btn" data-bs-toggle="popover" data-bs-content="Se recomiendan imágenes cuadradas para un mejor visualización. De lo contrario parte de la imagen prodrá ser recortada, resolución recomendada 320x320" data-bs-trigger="hover"></i>></i>
+                <i class="icono-form bi bi-question-circle-fill btn" data-bs-toggle="popover"
+                  data-bs-content="Se recomiendan imágenes cuadradas para un mejor visualización. De lo contrario parte de la imagen prodrá ser recortada, resolución recomendada 320x320"
+                  data-bs-trigger="hover"></i>></i>
                 <img class="img-fluid img-form" id="imgForm" alt="Imagen de Contacto">
                 <div class="lottie-form" id="lottieForm">
-                  <lottie-player src="https://assets3.lottiefiles.com/packages/lf20_z7DhMX.json" speed="1" loop autoplay></lottie-player>
-                  
+                  <lottie-player src="https://assets3.lottiefiles.com/packages/lf20_z7DhMX.json" speed="1" loop
+                    autoplay></lottie-player>
+
                 </div>
               </div>
             </div>
@@ -90,6 +91,52 @@
             <button id="botonCrearModificar" type="submit" class="btn btn-success">Crear Contacto</button>
           </div>
         </form>
+      </div>
+    </div>
+  </div>
+
+
+  <!----------------------------------------------------------------------------------------------------------------->
+
+  <!-- MODAL INFO  CONTACTO -->
+  <div class="modal fade" id="infoContactoModal" tabindex="-1" aria-labelledby="tituloCrearContactoModal"
+    aria-hidden="true">
+    <div class="modal-dialog">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title" id="tituloModal">Nuevo Contacto</h5>
+        </div>
+        <!-- Formulario de crear contacto-->
+
+        <div class="modal-body">
+          <div class="d-flex justify-content-center align-items-center flex-column">
+
+            <!-- Parte SUPERIOR DEL MODAL TARJETA-->
+            <div class="m-3">
+              <h3 class="text-uppercase text-center fw-bold mb-2" id="nombreInfoContacto"></h3>
+              <div class="d-flex align-items-center">
+                <i class="bi bi-envelope-fill me-2"></i>
+                <h5 class="me-4" id="correoInfoContacto"></h5>
+                <i id="copiarCorreo" class="bi bi-clipboard boton-copiar" data-bs-toggle="tooltip" data-bs-placement="right" data-bs-title="Copiar Correo"></i>
+              </div>
+              <div class="d-flex align-items-center">
+                <i class="bi bi-telephone-fill me-2"></i>
+                <h5 class="me-4" id="telfInfoContacto"></h5>
+                <i id="copiarTelf" class="bi bi-clipboard boton-copiar" data-bs-toggle="tooltip" data-bs-placement="right" data-bs-title="Copiar Telefono"></i>
+              </div>
+            </div>
+
+            <!-- Parte INFERIOR DEL MODAL TARJETA-->
+            <div class="m-3">
+              <img id="imgInfoContacto" class="border border-4 border-dark rounded"
+                alt="Vista previa de la imagen del contacto">
+            </div>
+          </div>
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancelar</button>
+
+        </div>
       </div>
     </div>
   </div>
