--- a/modales.html
+++ b/modales.html
@@ -55,5 +55,18 @@
 
     }
 
+    function abrilModalInfoContato(contacto)
+    {
+        //obtener datos
+        document.getElementById('nombreInfoContacto').textContent = contacto.nombre+''+contacto.apellidos;
+        document.getElementById('correoInfoContacto').textContent = contacto.correo;
+        document.getElementById('telfInfoContacto').textContent = contacto.telf;
+        document.getElementById('imgInfoContacto').src = contacto.imagen;
+        //abrimos modal
+        bootstrap.Modal.getOrCreateInstance(document.getElementById('infoContactoModal')).show();
+
+        
+    }
+
 
 </script>
