Video33 curso-gas-avanzado/tarjetas

--- a/botonesContacto.html
+++ b/botonesContacto.html
@@ -4,7 +4,7 @@
         let botonInfo = document.createElement('button');
         botonInfo.id = 'botonInfo' + contacto.fila;
         botonInfo.classList.add('btn', 'btn-success', 'm-1');
-        botonInfo.onclick = () => abrilModalInfoContato(contacto);
+        botonInfo.onclick = () => abrirModalInfoContacto(contacto);
 
         // le vamos agregar un icono
         let iconoInfo = document.createElement('i');
