--- a/main.html
+++ b/main.html
@@ -1,7 +1,7 @@
 <main>
   <!-- Botones superiores-->
   <div class="d-flex justify-content-center my-3">
-    <button type="button" class="btn btn-success m-2" onclick="crearTarjetasContactos()">
+    <button type="button" class="btn btn-success m-2" onclick="crearTarjetasCuadradas()">
       <i class="bi bi-postcard"></i>
     </button>
     <button type="button" class="btn btn-success m-2" onclick="crearTablaContactos()">
@@ -117,12 +117,14 @@
               <div class="d-flex align-items-center">
                 <i class="bi bi-envelope-fill me-2"></i>
                 <h5 class="me-4" id="correoInfoContacto"></h5>
-                <i id="copiarCorreo" class="bi bi-clipboard boton-copiar" data-bs-toggle="tooltip" data-bs-placement="right" data-bs-title="Copiar Correo"></i>
+                <i id="copiarCorreo" class="bi bi-clipboard boton-copiar" data-bs-toggle="tooltip"
+                  data-bs-placement="right" data-bs-title="Copiar Correo"></i>
               </div>
               <div class="d-flex align-items-center">
                 <i class="bi bi-telephone-fill me-2"></i>
                 <h5 class="me-4" id="telfInfoContacto"></h5>
-                <i id="copiarTelf" class="bi bi-clipboard boton-copiar" data-bs-toggle="tooltip" data-bs-placement="right" data-bs-title="Copiar Telefono"></i>
+                <i id="copiarTelf" class="bi bi-clipboard boton-copiar" data-bs-toggle="tooltip"
+                  data-bs-placement="right" data-bs-title="Copiar Telefono"></i>
               </div>
             </div>
 
@@ -140,5 +142,32 @@
       </div>
     </div>
   </div>
+
+
+  <!--Plantilla Contacto 1 -->
+  <template id="plantillaContacto">
+
+    <div id="plantillaLoader" class="my-5 mx-2 plantilla-loader">
+      <p>Cargando Imagen</p>
+
+      <div class="lds-ring"><div></div><div></div><div></div><div></div></div>
+
+    </div>
+
+    <div id="plantillaNumero" class="my-5 mx-2">
+      <div class="caja-contacto">
+        <img id="plantillaImagen" alt="Imagen del Contacto">
+        <div class="datos-contacto">
+          <h3 id="plantillaNombre"></h3>
+          <span>
+            <a id="plantillaInfo" class="boton-caja btn btn-success"><i class="bi bi-plus-square"></i></a>
+            <a id="plantillaEditar" class="boton-caja btn btn-warning"><i class="bi bi-pencil-square"></i></a>
+            <a id="plantillaBorrar" class="boton-caja btn btn-danger"><i class="bi bi-trash"></i></a>
+          </span>
+        </div>
+      </div>
+    </div>
+
+  </template>
 
 </main>
