--- a/modales.html
+++ b/modales.html
@@ -55,7 +55,7 @@
 
     }
 
-    function abrilModalInfoContato(contacto)
+    function abrirModalInfoContacto(contacto)
     {
         //obtener datos
         document.getElementById('nombreInfoContacto').textContent = contacto.nombre+''+contacto.apellidos;
