--- a/css.html
+++ b/css.html
@@ -1,3 +1,4 @@
+<link href="https://fonts.cdnfonts.com/css/janda-manatee-solid" rel="stylesheet">      
 <script src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script>
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
   integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
@@ -25,6 +26,7 @@
     display: flex;
     flex-direction: column;
     min-height: 100vh;
+    font-family: 'Janda Manatee Solid', sans-serif;
   }
 
   header {
@@ -136,6 +138,80 @@
     color: var(--color-verde-oscuro);
     transform: scale(1.2);
   }
+
+  /* ESTILOS ADICIONALES */
+
+  .caja-contacto, .caja-contacto img
+  {
+    position: relative;
+    border: .3rem solid var(--color-gris-oscuro);
+    border-radius: .3rem;
+    background-color: var(--color-gris-oscuro);
+  }
+
+.datos-contacto
+{
+  position: absolute;
+  padding: 0.5rem;
+  background: black;
+  width: 100%;
+  height: 6rem;
+  bottom: 0;
+
+}
+
+.datos-contacto h3
+{
+  color: white;
+  font-size: 1.5rem;
+}
+
+.datos-contacto span
+{
+  position: absolute;
+  bottom: 0;
+  right: 0;
+  margin: .4rem;
+}
+
+.caja-contacto img
+{
+  z-index: 2;
+  transition: all .5s;
+  width: 16rem;
+  height: 16rem;
+  object-fit: cover;
+}
+
+.caja-contacto:hover img
+{
+transform: translateY(-6rem);
+}
+
+.plantilla-loader
+{
+  width: 16rem;
+  height: 16rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  border: 1px solid red;
+  border-radius: .5rem;
+  background-color: white;
+}
+
+.boton-caja
+{
+  transform: scale(1);
+  transform: all .4s0;
+}
+
+.boton-caja:hover
+{
+  transform: translateY(10%);
+}
+
 
 
 
