--- a/web.html
+++ b/web.html
@@ -29,6 +29,7 @@
     <?!= obtenerDatosHTML('modales'); ?>
     <?!= obtenerDatosHTML('notificaciones'); ?>
     <?!= obtenerDatosHTML('tarjetas'); ?>
+    <?!= obtenerDatosHTML('tarjetasCuadradas'); ?>
     <?!= obtenerDatosHTML('tablas'); ?>
     <?!= obtenerDatosHTML('loaders'); ?>
     
