--- a/web.html
+++ b/web.html
@@ -32,6 +32,7 @@
     <?!= obtenerDatosHTML('tarjetasCuadradas'); ?>
     <?!= obtenerDatosHTML('tablas'); ?>
     <?!= obtenerDatosHTML('loaders'); ?>
+    <?!= obtenerDatosHTML('plantillas'); ?>
     
 
 </body>
