--- a/css.html
+++ b/css.html
@@ -154,10 +154,14 @@
     transform: scale(1.2);
   }
 
-  #imgInfoContacto {
-    width: 100%;
-    height: 150px;
+  .img-info-contacto {
+    width: 20rem;
+    height: 20rem;
     object-fit: cover;
+    border: .3rem solid black;
+    border-radius: .3rem;
+    padding: .3rem;
+    background: white;
   }
 
 
